--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -7,6 +7,10 @@ on:
   release:
     types: [created]
 
+permissions:
+  id-token: write  # Required for OIDC
+  contents: read
+
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
@@ -17,6 +21,11 @@ jobs:
           node-version: '20'
           cache: 'npm'
           registry-url: https://registry.npmjs.org/
+          
+      # Ensure npm 11.5.1 or later is installed in order to npm OIDC to work
+      - name: Update npm
+        run: npm install -g npm@latest
+        
       - run: npm ci
       - run: npm run build
       - run: echo "VERSION=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
@@ -33,5 +42,3 @@ jobs:
       - name: Publish the package
         run: npm publish --tag ${NPM_TAG}
         working-directory: dist
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
