Update repository URL format in package.json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "igc-grid-lite",
   "repository": {
     "type": "git",
-    "url": "https://github.com/IgniteUI/igc-grid-lite"
+    "url": "git+https://github.com/IgniteUI/igc-grid-lite.git"
   },
   "exports": {
     ".": "./dist/src/index.js",
